:bug: Added padding between json response body and the scrollbar that appears when screen size is reduced horizontally

--- a/src/components/ResponseArea/ResponseBody/ResponseBody.scss
+++ b/src/components/ResponseArea/ResponseBody/ResponseBody.scss
@@ -9,6 +9,7 @@
     color: white;
     font-size: small;
     margin-bottom: 0px;
+    padding-bottom: 5px;
   }
 
   ::-webkit-scrollbar {
